--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         .center {
             width: 75%;
             display: block;
+            margin: auto;
             text-align: center
         }
       </style>
