at least this finally compiles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         .center {
             width: 75%;
             display: block;
-            text-align: center
+            text-align: center;
+            margin: auto;
         }
       </style>
     </head>
