things move God bless

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
     <head>
+      <script src="main2.js"></script>
         <style>
         html {
             width: 100%;
@@ -18,13 +19,18 @@
             text-align: center;
             margin: auto;
         }
+        #canvas {
+          border: 1px solid white;
+
+        }
       </style>
     </head>
     <body>
         <div class = "center">
             <h1> Neverwing </h1>
-            <canvas id="canvas" width="761" height="1077"></canvas>
+            <canvas id="canvas" width="200" height="500"></canvas>
+            <kbd id="key"> &nbsp; </kbd>
         </div>
-        <script src="_build/main.d.js"></script>
+
     </body>
 </html>
