score should update on screen now

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class = "center">
             <h1> Neverwing </h1>
             <canvas id="canvas" width="300" height="500"></canvas>
-            <kbd id="key"> &nbsp; </kbd>
+            <div id="score"> Score: </div>
             <h3> Use keyboard characters A and D to move </h3>
         </div>
 
