health decreased w collision

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <h1> Neverwing </h1>
             <canvas id="canvas" width="300" height="500"></canvas>
             <div id="score"> Score : </div>
+            <div id="temp"> Health : 10/10</div>
 
             <h3> Use keyboard characters A and D to move </h3>
         </div>
