--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
             width: 100%;
         }
         body {
-            background-color: #000000;
-            color: #ffffff;
+            background-color: #ffffff;
+            color: #000000;
             margin: 0 0 0 0;
             padding: 0;
         }
@@ -20,7 +20,7 @@
             margin: auto;
         }
         #canvas {
-          border: 1px solid white;
+          border: 1px solid black;
 
         }
       </style>
