--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <canvas id="canvas" width="300" height="500"></canvas>
             <div id="score"> Score : </div>
             <div id="temp"> Health : 10/10</div>
+            <div id="powerups"> Powerups: </div>
 
             <h3> Use keyboard characters A and D to move </h3>
         </div>
