--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
     <head>
       <script src="main2.js"></script>
-      <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Work+Sans"
+       rel="stylesheet">
         <style>
         html {
             width: 100%;
