--- a/index.html
+++ b/index.html
@@ -75,28 +75,40 @@
             <h1> Neverwing </h1>
             <div class = "row">
                     <div class = "col">
-                            <h4> Legion </h4>
+                            <h4> Legend </h4>
                             <br>
-                            <p>
-                                <div id = "player"></div> 
-                                Player
-                                
-                            </p>
-                            <p> 
-                                <div id = "projectile"></div>
-                                Projectile
-                            <p> 
-                                <div id = "mon1"></div>
-                                Lvl 1 Monster </p>
-                            <p> 
-                                <div id = "mon2"></div>
-                                Lvl 2 Monster </p>
-                            <p> 
-                                <div id = "mon3"></div>
-                                Lvl 3 Monster </p>
-                            <p> 
-                                <div id = "fireball"></div>
-                                Fireball </p>
+                            <table>
+                            <tr>
+                              <td><div id = "player"></div></td>
+                              <td></td>
+                              <td>Player</td>
+                            </tr>
+                            <tr>
+                              <td><div id = "projectile"></div></td>
+                              <td></td>
+                              <td>Projectile</td>
+                            </tr>
+                            <tr>
+                              <td><div id = "mon1"></div></td>
+                              <td></td>
+                              <td>Lvl 1 Monster</td>
+                            </tr>
+                            <tr>
+                              <td><div id = "mon2"></div></td>
+                              <td></td>
+                              <td>Lvl 2 Monster</td>
+                            </tr>
+                            <tr>
+                              <td><div id = "mon3"></div></td>
+                              <td></td>
+                              <td>Lvl 3 Monster</td>
+                            </tr>
+                            <tr>
+                              <td><div id = "fireball"></div></td>
+                              <td></td>
+                              <td>Fireball</td>
+                            </tr>
+                          </table>
                         </div>
                         <div class = "col">
                                 <canvas id="canvas" width="300" height="500"></canvas>
@@ -110,7 +122,7 @@
 
             <h3> Use keyboard characters A and D to move </h3>
 
-            
+
         </div>
     </body>
 </html>
