--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
             <div id="score"> Score: </div>
             <div id="temp"> HP: 10</div>
-            <div id="powerups"> Powerups: </div>
+            <div id="powerups"> Power Ups: </div>
 
             <h3> Use keyboard characters A and D to move </h3>
 
